[package]
name = "git-bonsai"
version = "0.1.0"
authors = ["Aurelien Gateau <mail@agateau.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"
dialoguer = "0.5.0"
console = "0.9.2"

[dev-dependencies]
assert_cmd = "0.10.2"
assert_fs = "0.13.1"
