[package]
name = "git-bonsai"
version = "0.1.0"
authors = ["Aurélien Gâteau <mail@agateau.com>"]
edition = "2018"
description = "Command-line tool to clean the branches of your git garden"
documentation = "https://github.com/agateau/git-bonsai"
readme = "README.md"
homepage = "https://github.com/agateau/git-bonsai"
repository = "https://github.com/agateau/git-bonsai"
license = "GPL-3.0+"
keywords = ["git", "clean"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
structopt = "0.2.10"
dialoguer = "0.5.0"
console = "0.9.2"

[dev-dependencies]
assert_cmd = "0.10.2"
assert_fs = "0.13.1"
