[package]
name = "git-bonsai"
version = "0.2.2"
authors = ["Aurélien Gâteau <mail@agateau.com>"]
edition = "2018"
description = "Command-line tool to clean the branches of your git garden"
documentation = "https://github.com/agateau/git-bonsai"
readme = "README.md"
homepage = "https://github.com/agateau/git-bonsai"
repository = "https://github.com/agateau/git-bonsai"
license = "GPL-3.0+"
keywords = ["git", "clean"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
structopt = "0.3.26"
dialoguer = "0.10.1"
console = "0.15.0"

[dev-dependencies]
assert_fs = "1.0.7"
predicates = "2.1.1"
claim = "0.5.0"
